--- a/quicknav.css
+++ b/quicknav.css
@@ -2,11 +2,11 @@
 .qn-trigger {
   position: fixed;
   top: 20px;
-  left: 20px;
+  left: 0px;
   width: 50px;
   height: 50px;
   background-color: #6366f1;
-  border-radius: 8px;
+  border-radius: 0px 8px 8px 0px;
   display: flex;
   align-items: center;
   justify-content: center;
